z-index fix for hero

--- a/web/wp-content/themes/nats-philanthropies-theme/modules/hero/scss/_hero.scss
+++ b/web/wp-content/themes/nats-philanthropies-theme/modules/hero/scss/_hero.scss
@@ -5,6 +5,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  z-index: 1;
 
   &::before {
     content: '';
